[tool.poetry]
name = "langgraph-dataviz"
version = "0.1.0"
description = ""
authors = ["Luiz Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.59"
langchain-openai = "^0.2.12"
langchain = "^0.3.11"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.24"
pandas = "^2.2.3"
langchain-community = "^0.3.11"
langchain-ollama = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
